`MaxPermSize` was deprecated