@@ -32,7 +32,7 @@ parallelExecution in Test := false
 
 fork := true
 
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled", "-Djna.nosys=true")
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:+CMSClassUnloadingEnabled", "-Djna.nosys=true")
 
 // additional libraries
 libraryDependencies ++= Seq(
